[package]
name = "actix-playground"
version = "0.1.0"
authors = ["Brethland <ycy1207694344@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"
chrono = "0.4.13"
serde = "1.0"
actix-redis = "0.8.0"
futures = "0.3.1"
redis-async = "0.6.1"
env_logger = "0.7"
actix = "0.9.0"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }