[package]
name = "icpc-statistic"
version = "0.1.0"
authors = ["NJUPT-SAST <sast@njupt.edu.cn>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"
chrono = "0.4.13"
serde = "1.0"
actix-redis = "0.8.0"
futures = "0.3.1"
redis-async = "0.6.1"
env_logger = "0.7"
actix = "0.9.0"
serde_json = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.10", features = ["json"] }